
syntax = "proto3";

package arkd;


/// Public ark service for arkd.
service ArkService {
	rpc GetArkInfo(Empty) returns (ArkInfo) {}
	rpc RequestOnboardCosign(OnboardCosignRequest) returns (OnboardCosignResponse) {}
}

message ArkInfo {
	bytes pubkey = 1;
	bytes xonly_pubkey = 2;
}

message OnboardCosignRequest {
	bytes user_part = 1;
}

message OnboardCosignResponse {
	bytes asp_part = 1;
}


/// Administration service for arkd.
service AdminService {
	rpc stop(Empty) returns (Empty) {}
}

message Empty {}
